<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D9BF0"
    tools:context=".EventInfo">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                app:backgroundTint="@color/primary_orange"
                app:cornerRadius="100dp"
                app:icon="@drawable/ic_baseline_photo_24_blue"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="200dp"
                app:iconTint="@color/secondary_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.003"
                app:rippleColor="@color/secondary_black"
                tools:ignore="SpeakableTextPresentCheck" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonImage"
                app:layout_constraintVertical_bias="0.9">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/party_title"
                    app:boxBackgroundColor="@color/secondary_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_baseline_title_24"
                        android:fontFamily="@font/fredoka_one"
                        android:maxLength="15"
                        tools:targetApi="jelly_bean" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/party_description"
                    app:boxBackgroundColor="@color/secondary_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTitle">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_baseline_description_24"
                        android:fontFamily="@font/fredoka_one"
                        android:gravity="start"
                        android:lines="5"
                        tools:targetApi="jelly_bean" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/date"
                    app:boxBackgroundColor="@color/secondary_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutOrganizer">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:drawableEnd="@drawable/ic_baseline_date_range_24"
                        android:focusableInTouchMode="false"
                        android:fontFamily="@font/fredoka_one"
                        tools:targetApi="jelly_bean" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/address"
                    app:boxBackgroundColor="@color/secondary_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDate">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_baseline_place_24"
                        android:fontFamily="@font/fredoka_one"
                        tools:targetApi="jelly_bean" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutOrganizer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/hosted_by"
                    app:boxBackgroundColor="@color/secondary_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDescription">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textOrganizer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_baseline_person_24"
                        android:fontFamily="@font/fredoka_one"
                        tools:targetApi="jelly_bean" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonDecline"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="32dp"
                    android:fontFamily="@font/fredoka_one"
                    android:text="@string/guest_list"
                    android:textColor="@color/secondary_black"
                    android:textSize="24sp"
                    app:backgroundTint="@color/primary_orange"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddress" />

                <Button
                    android:id="@+id/buttonBankInfo"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:fontFamily="@font/fredoka_one"
                    android:text="@string/bank_info"
                    android:textColor="@color/background_blue"
                    android:textSize="24sp"
                    app:backgroundTint="@color/secondary_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/buttonDecline" />

                <Button
                    android:id="@+id/buttonFundsList"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:fontFamily="@font/fredoka_one"
                    android:text="@string/funds"
                    android:textColor="@color/background_blue"
                    android:textSize="24sp"
                    app:backgroundTint="@color/secondary_white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/buttonBankInfo" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>